# RbxStu-V3

./: AUTHORS  CMakeLists.txt  CMakePresets.json  Entry.cpp  ExceptionHandler.cpp  ExceptionHandler.hpp  FastFlags.cpp  FastFlags.hpp  Logger.cpp  Logger.hpp  README.MD  Security.cpp  Security.hpp  Settings.hpp  Utilities.cpp  Utilities.hpp  library.h
Analysis/: AOBScanner.cpp  AOBScanner.hpp  Disassembler.cpp  Disassembler.hpp  README.MD  RTTI.cpp  RTTI.hpp  Scanner.cpp  Scanner.hpp  SignatureMatcher.cpp  SignatureMatcher.hpp  StringMatcher.cpp  StringMatcher.hpp  StringSearcher.cpp  StringSearcher.hpp  XrefSearcher.cpp  XrefSearcher.hpp
Assembly/: ExternalAssembly.h  Protection.h  utils.x64.asm
Communication/: PacketBase.hpp  PacketManager.cpp  PacketManager.hpp  PipeCommunication.cpp  PipeCommunication.hpp  README.md  WebsocketCommunication.cpp  WebsocketCommunication.hpp  WebsocketServer.cpp  WebsocketServer.hpp
Communication/Packets/: ScheduleExecution.hpp
Dependencies/Imgui/: CMakeLists.txt
Dependencies/Imgui/backends/: imgui_impl_win32.cpp
Dependencies/Luau/: CMakeLists.txt
Dependencies/Luau/VM/include/: lua.h
Dependencies/Luau/VM/src/: StudioOffsets.cpp  StudioOffsets.h  lcorolib.cpp  ldo.cpp  lgc.cpp  ltable.cpp  ltable.h
Dependencies/RTTIHook/: PE.h  RTTIScanner.h
Dependencies/cryptopp-cmake/: CMakeLists.txt
Dependencies/kiero/: cmakelists.txt  kiero.cpp
Dependencies/kiero/include/: kiero.h
Events/: Connection.hpp  Event.hpp
Imgui/: README.MD
Miscellaneous/: Initializable.cpp  Initializable.hpp  ListenableEvent.hpp  OpaqueClass.hpp
Modding/: ModContext.cpp  ModContext.hpp  ModManager.cpp  ModManager.hpp  README.MD
Modding/include/: Job.hpp  ModContext.hpp  ModVersion.hpp  TaskScheduler.hpp
Render/: Color4.hpp  Renderable.cpp  Renderable.hpp  RenderableStub.cpp  RenderableStub.hpp
Render/ImmediateGui/: Keycodes.hpp  PagedWindow.cpp  PagedWindow.hpp
Render/UserInterface/: UserInterface.cpp  UserInterface.hpp
Render/UserInterface/Pages/: CreditsPage.cpp  CreditsPage.hpp  ExecutionPage.cpp  ExecutionPage.hpp  SettingsPage.cpp  SettingsPage.hpp
Roblox/: DataModel.cpp  DataModel.hpp  Primitive.cpp  Primitive.hpp  README.MD  Script.cpp  Script.hpp  ScriptContext.cpp  ScriptContext.hpp  TypeDefinitions.hpp  World.cpp  World.hpp
Scanners/: Luau.cpp  Luau.hpp  README.MD  Rbx.cpp  Rbx.hpp  RbxReflection.cpp  RbxReflection.hpp
Scheduling/: Job.cpp  Job.hpp  README.MD  TaskScheduler.cpp  TaskScheduler.hpp  TaskSchedulerOrchestrator.cpp  TaskSchedulerOrchestrator.hpp
Scheduling/Job/: DataModelWatcherJob.cpp  DataModelWatcherJob.hpp  ExecuteScriptJob.cpp  ExecuteScriptJob.hpp  ExecutionEngineStepJob.cpp  ExecutionEngineStepJob.hpp  ImguiRenderJob.cpp  ImguiRenderJob.hpp  InitializeExecutionEngineJob.cpp  InitializeExecutionEngineJob.hpp  ResumeYieldedThreadsJob.cpp  ResumeYieldedThreadsJob.hpp  SynchronizedDispatchJob.cpp  SynchronizedDispatchJob.hpp
Scheduling/TaskSchedulers/: StandaloneTaskScheduler.cpp  StandaloneTaskScheduler.hpp
StuLuau/: ExecutionEngine.cpp  ExecutionEngine.hpp  LuauSecurity.cpp  LuauSecurity.hpp  README.MD
StuLuau/Environment/: EnvironmentContext.cpp  EnvironmentContext.hpp  Library.cpp  Library.hpp
StuLuau/Environment/Custom/: Memory.cpp  Memory.hpp  NewGlobals.cpp  NewGlobals.hpp
StuLuau/Environment/UNC/: Cache.cpp  Cache.hpp  Closures.cpp  Closures.hpp  Crypt.cpp  Crypt.hpp  Debug.cpp  Debug.hpp  FileSystem.cpp  FileSystem.hpp  Globals.cpp  Globals.hpp  Instances.cpp  Instances.hpp  Miscellaneous.cpp  Miscellaneous.hpp  Scripts.cpp  Scripts.hpp  WebSocket.cpp  WebSocket.hpp
StuLuau/Extensions/: luauext.hpp
StuLuau/Interop/: ExposedObject.cpp  ExposedObject.hpp  NativeObject.cpp  NativeObject.hpp
